--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,6 @@ file.reference.AngularJSPhoneCat-app=app
 file.reference.AngularJSPhoneCat-test=test
 file.reference.vizsec-papers-app=app
 files.encoding=UTF-8
-site.root.folder=${file.reference.AngularJSPhoneCat-app}
+site.root.folder=${file.reference.vizsec-papers-app}
 start.file=index.html
-test.folder=${file.reference.AngularJSPhoneCat-test}
 web.context.root=/vizsec-papers
